--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,21 @@ body {
   border-radius: 20%;
 }
 
+.btn-start {
+  display: inline-block;
+  height: 80px;
+  width: 180px;
+  padding-left: 8px;
+  border: 10px solid black;
+  border-radius: 20%;
+  background-color: white;
+  text-align: center;
+  color: blue;
+  font-weight: bold;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 30px;
+}
+
 .game-over {
   background-color: red;
   opacity: 0.8;
